# tinyVTA

./: README.md
RPCServer/: dma_ps_testing_mnist.ipynb  rpc_server.py
RPCServer/dma_ps/: design_1.hwh  design_1.tcl
docs/: mnist.ipynb
models/: mnist.weights.h5
tinyTVM/: compiler.py  isa.py  memory_packer.py  rpc_client.py  utils.py
vivado/auto_synth/: build.tcl
vivado/auto_synth/.Xil/: design_1_propImpl.xdc
vivado/auto_synth/.Xil/Vivado-1537555-hpclab/incrSyn/n/: 1296651739.nlo  1471600223.nlo  2739352823.nlo  3452853444.nlo  869215376.nlo
vivado/auto_synth/.Xil/Vivado-1537555-hpclab/realtime/: design_1.tcl  design_1_synth.xdc  dupFiles.rpt
vivado/auto_synth/.Xil/Vivado-1537555-hpclab/realtime/tmp/: 1088A4CA0.rtd  1088A4D20.rtd  1088A50E0.rtd  1088A5460.rtd  1088A5780.rtd  1088A5800.rtd  112EB64E0.rtd.straps.rtd  112EB64E0.rtd.tcl  1148DAE00.rtd.tcl  2CB3AFA0.tim  48701E20.rtd  48B5FDE0.rtd.straps.rtd  48B5FDE0.rtd.tcl  48B5FDE0.tim  (+39 more)
vivado/auto_synth/.Xil/Vivado-1549653-hpclab/realtime/: design_1.tcl  design_1_synth.xdc  dupFiles.rpt
vivado/hls/: .dma_ps.cpp.swp  dma_ps.cpp  proc_tb.cpp
vivado/hls/dma_ps/: .cproject  .project  .vitis_hls_log_all.xml  hls.app
vivado/hls/dma_ps/.apc/: autopilot.apfmapping
vivado/hls/dma_ps/solution1/: directives.tcl  script.tcl  solution1.aps  solution1.directive  solution1_data.json
vivado/hls/dma_ps/solution1/.autopilot/: .automg_exit  .autopilot_exit
vivado/hls/dma_ps/solution1/.debug/: activ.protoinst
vivado/hls/dma_ps/solution1/impl/misc/drivers/acti_proc_v1_0/src/: CMakeLists.txt  xacti_proc.c
(+401 files in other folders)
